--- a/shoppy/front/package.json
+++ b/shoppy/front/package.json
@@ -2,15 +2,17 @@
   "name": "front",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:8000/",
+  "proxy": "http://localhost:8000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
