--- a/shoppy/front/package.json
+++ b/shoppy/front/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "jwt-decode": "^4.0.0",
+    "rc-pagination": "^3.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-cookie": "^6.1.1",
