--- a/shoppy/front/package.json
+++ b/shoppy/front/package.json
@@ -22,6 +22,7 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
+    "reselect": "^5.0.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
